k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travellist-app
  labels:
    app: travellist-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: travellist-app
  template:
    metadata:
      labels:
        app: travellist-app
    spec:
      containers:
      - name: travellist-app
        image: 172.16.3.116/travellist-app:main.135
        ports:
          - containerPort: 80
      imagePullSecrets:
        - name: nexus-docker
---
apiVersion: v1
kind: Service
metadata:
  name: travellist-app-service
spec:
  selector:
    app: travellist-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
